Try to get rid of legacy API which can break starting with java 17